force-app/main/default/objects/Node_Question__c/Node_Question__c.object-meta.xml
<CustomObject>
    <label>Node Question</label>
    <nameField>
        <label>Node Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Node Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>