force-app/main/default/objects/Node_Question__c/fields/Mapping__c.field-meta.xml
<CustomField>
    <fullName>Mapping__c</fullName>
    <label>Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>