force-app/main/default/objects/Node_Question__c/fields/Question_Node__c.field-meta.xml
<CustomField>
    <fullName>Question_Node__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Node</label>
    <referenceTo>Question_Node__c</referenceTo>
    <relationshipLabel>Node Questions</relationshipLabel>
    <relationshipName>Node_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>