force-app/main/default/objects/Node_Question__c/fields/Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipLabel>Node Questions</relationshipLabel>
    <relationshipName>Node_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>